[package]
name = "arc-cell"
version = "0.2.2"
authors = ["Connie Hilarides <conni_h@outlook.com>"]
repository = "https://github.com/Connicpu/arc-cell"
license = "MIT"
description = "Helper for a simple Cell-like object containing Arc/Weak"
edition = "2018"
keywords = ["sync", "arc", "cell"]

[dependencies]
